# msd-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-APACHE  README.md  publish.py  pyproject.toml  run_tests.py
docs/: PUBLISHING.md  file-embedding-deep-dive.md  key-management.md  overview.md  tutorial.md  typed-data.md  writing-tests.md
examples/: README.md  sign_and_embed_example.py
examples/sample_files/: sample.pptx
examples/signed_output/: signed_demo.docx  signed_demo.xlsx  signed_real.pptx
notes/: Trust Network.md  overview.zef.md  sdk-ux-design.zef.md
src/msd_sdk/: __init__.py  _config.py  _types.py  core.py  key_management.py  trust_network.py
tests/: test_content_hash.py  test_create_granule.py  test_embed.py  test_sign.py  test_sign_and_embed_dict.py  test_sign_and_embed_files.py  test_trust_network.py  test_verify.py
