[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msd-sdk"
version = "0.1.4"
description = "Python SDK for Meta Structured Data"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Ulf Bissbort" },
    { name = "Staple AI" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Note: zef-core must be installed separately (not on PyPI yet)
# The runtime check in __init__.py verifies correct zef is installed
dependencies = []

[project.urls]
Homepage = "https://github.com/UlfBissbort/msd-sdk-python"
Repository = "https://github.com/UlfBissbort/msd-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/msd_sdk"]
